# Job_hunt_assistant

./: .actrc  .env.template  .gitignore  .pylintrc  README.md  pyproject.toml  pytest.ini
.github/: FUNDING.yml
.github/workflows/: cla.yml  py_test.yml  test_env_setup_and_run_workflow.yml
api_playground/: google_custom_search.http  readme.md
data_folder/: work_preferences.yaml
docs/: getting_web_search_engine_creds.md  project_management.md  tools.md
funny_sounds/: readme.md
src/: config.py  constants.py  custom_exception.py  job.py  job_application_profile.py  job_application_saver.py  main.py
src/ai_hawk/: authenticator.py  bot_facade.py  job_applier.py  job_manager.py
src/ai_hawk/llm/: llm_manager.py
src/job_portals/: application_form_elements.py  base_job_portal.py
src/job_portals/lever/: application_page.py  authenticator.py  job_page.py  jobs_page.py  lever.py
src/services/: web_search_engine.py
src/utils/: browser_utils.py  chrome_utils.py
tensorzero_config/: tensorzero.toml
tests/integration/: test_web_search_engine_integration.py
tests/unit/: test_aihawk_bot_facade.py  test_job_application_profile.py  test_utils.py  test_web_search_engine.py  test_web_search_engine_factory.py
